kubernetes/infrastructure/cilium/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      "lbipam.cilium.io/ips": "172.16.61.2"
  listeners:
    - name: http
      hostname: "*.internal.paulfriedrich.me"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.internal.paulfriedrich.me"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-internal-paulfriedrich-me-tls
            kind: Secret
            namespace: traefik
  addresses:
    - type: IPAddress
      value: 172.16.61.2
